几何数学中加入坐标系的定义

--- a/math.org
+++ b/math.org
@@ -491,3 +491,20 @@ $$ P(d1|h+) * P(d2|d1, h+) * P(d3|d2,d1, h+) * .. $$
 $$ P(d1|h+) * P(d2|h+) * P(d3|h+) * ..$$ 这个就是所谓的条件独立假设，也正是朴素贝叶斯方法的朴素之处。而计算该式子比较简
 单，只要统计d_{i}这个单词在垃圾邮件中出现的频率即可。
  
+* 几何
+讨论几何就必须要明确坐标系，不同的坐标系下得出的结果可能不一样。这里主要阐
+述了几种3维坐标系。
+- 世界坐标系：一般指地球经纬度坐标系，它是一个特殊的坐标系，它建立了描述其
+  他坐标系所需要的参考框架。也就是能够用世界坐标系描述其他坐标系的卫士，而
+  不能用更大的、外部的坐标系来描述世界坐标系。也可以把它叫绝对坐标系或者全
+  局坐标系或者宇宙坐标系。一般说的“向东”、“向西”等都在基于世界坐标系。
+- 物体坐标系：是和特定物体相关联的坐标系。每个物体都有它们独立的坐标系。当
+  物体移动和改变方向时，和该物体相关联的坐标系将随之移动和改变方向。“前、
+  后、左、右”概念是基于物体坐标系。有时也叫身体坐标系或模型坐标系。
+- 摄像机坐标系：是和观察者密切相关的坐标系。摄像机坐标系能被看做是一种特殊
+  的物体坐标系，该物体坐标系在摄像机的屏幕可视区域。摄像机坐标系中，摄像机
+  是原点，x轴向右，z轴向前，y轴向摄像机上方。
+- 惯性坐标系：为了简化世界坐标系到物体坐标系的转换，引入了惯性坐标系。惯性
+  坐标系的原点和物体坐标系的原点重合，但惯性坐标系的轴平行于世界坐标系的轴。
+  从物体坐标系转换到惯性坐标系只需要旋转，从惯性坐标系转换到世界坐标系只需
+  要平移。
