--- a/signal.org
+++ b/signal.org
@@ -314,3 +314,15 @@ w_{k} \Rightarrow \frac{\pi}{M}k, (k = 0, 1, ...,M)
   
 
 
+** 采样重构
+*** 频率
+- 模拟频率f：每秒经历多少个周期，单位Hz，即1/s；
+- 模拟角频率Ω：每秒经历多少弧度，单位rad/s；
+- 数字频率w：每个采样点间隔之间的弧度，单位rad。
+- 关系：\(Ω = 2\pi{}f\), \(w = ΩT\)
+*** 采样
+- 采样定理：如果采样频率\(F_{s}\)大于有限带宽信号\(x_{a}(t)\)带宽\(F_{D}\)
+  的2倍即 $$F_{s}>2F_{D}$$ 则该信号可以由它的采样值\(x(n)=x_{a}(nT_{s})\)重
+  构，否则就会在x(n)中产生混叠。对该有限带宽模拟信号的2F_{D}就称为奈奎斯特
+  频率。
+*** 重构
