tool中增加目录模式下压缩标记的文件

--- a/math.org
+++ b/math.org
@@ -150,12 +150,19 @@ pl.show()
   为||\alpha||，几范数就是元素几次方的和，除以维数；通俗的理解范数其实是将
   一个事物映射到非负实数域，具有“长度”，“大小”概念； 
 - 向量点积：设两个向量的坐标表示为\(a=(a_{x}, a_{y}, a_{z}), b=(b_{x},
-  b_{y}, b_{z})\), 则向量a和b的内积表示为 
-  $$a.b=(|a||b|\cos{\theta})=(a_{x}b_{x}+a_{y}b_{y}+a_{z}b_{z})$$; 
+  b_{y}, b_{z})\), 则向量a和b的内积表示如下； 
+  $$a.b=(|a||b|\cos{\theta})=(a_{x}b_{x}+a_{y}b_{y}+a_{z}b_{z})$$ 
 - 向量叉积：设两个向量的坐标表示为\(a=(a_{x}, a_{y}, a_{z}), b=(b_{x},
   b_{y}, b_{z})\), 则向量a和b的叉积表示为, 其中\(n_{0}\)表示ab平面的法向量
   单位向量
-  $$axb=(|a||b|\sin{\theta}n_{0})=(a_{y}b_{z}-a_{z}b_{y}, a_{z}b_{x}-a_{x}b_{z}, a_{x}b_{y}-a_{y}b_{x})$$ 
+  $$axb=(|a||b|\sin{\theta}n_{0})=(a_{y}b_{z}-a_{z}b_{y}, a_{z}b_{x}-a_{x}b_{z}, a_{x}b_{y}-a_{y}b_{x})$$
+- 余子式：余子式是一个矩阵，而代数余子式是一个标量；
+- 标准伴随矩阵：矩阵的所有代数余子式构成的矩阵的转置，用adj表示；
+- 奇异矩阵：矩阵的行列式为0，表示该矩阵是奇异的，反之亦然；
+- 矩阵的逆：奇异矩阵没有逆矩阵，反之亦然，计算公式如下
+  $$M^{-1}=\frac{adj(M)}{|M|}$$
+- 正交矩阵：若方阵M是正交的，则当且仅当M与它转置M^{T}的乘积等于单位阵。也就
+  是如果一个矩阵是正交的，则它的转置等于它的逆；
 ** 向量
 - 向量的导数：其中A是矩阵，x是一个n维向量。
   $$\frac{\partial{AX}}{\partial{X}} = A^{T}$$ 和
@@ -168,9 +175,18 @@ pl.show()
 行列式和矩阵变换导致的尺寸改变相关。其中行列式的绝对值和面积(2D), 体积(3D)
 的改变相关。行列式的符号说明了变换矩阵是否包含镜像或投影。矩阵行列式为0，表
 示该矩阵包含投影变换，为负，表示包含镜像。
-*** 余子式
-余子式是一个矩阵，而代数余子式是一个标量。
 ** 物理意义
+*** 矩阵的逆
+矩阵的逆可以撤销原变换的变换，一个向量v用矩阵M进行变换，接着用M的逆M^{-1}进
+行变换，将会得到原向量v。
+*** 正交矩阵
+旋转矩阵和镜像矩阵都是正交的。有时由外部数据构成的矩阵，由于可能存在部分坏
+数据，常常需要对矩阵做正交化，这个矩阵要尽可能的和原矩阵相同，常常使用的方
+法是施密特正交化，构造一组正交基向量(矩阵的行)。
+- 正交区别：向量也有正交的定义，由于矩阵是一组向量构成。向量正交指两个向量
+  之间的正交性，矩阵正交指矩阵内部各个行向量或者列向量之间的互相正交，因为
+  由于有\(MM^{T}=I\)，所以表示每个矩阵内部向量除了和自身点积不为0，其他都是
+  0，也就类似向量的正交。
 *** 变换
 向量在几何上能被解释成一系列与轴平行的位移，如向量[1, -3, -4]能被解释成位移
 [1, 0, 0]随后位移[0，-3, 0]在位移[0, 0，4]这个位移序列可以解释成向量的加法
