增加四元数

--- a/math.org
+++ b/math.org
@@ -75,7 +75,6 @@ ax.set_ylabel('y')
 ax.set_zlabel('t')
 pl.show()
 #+end_src
-
 ** 多项式
 *** 概念
 - 最大公因式：设f(x), g(x)是P[x]中两个多项式。P[x]中多项式d(x)称为f(x), g(x)的一个最大公因式，如果它满足
@@ -687,3 +686,18 @@ $$ P(d1|h+) * P(d2|h+) * P(d3|h+) * ..$$ 这个就是所谓的条件独立假设
   一个和第二个轴的自由度，只有2个自由度也就意味着手机的运动被限制在了二维空
   间，永远无法进入三维空间，立起来。不知道是不是和汽车的万向节一个原理。如
   果我们的雷达扫描也遇到了万向锁角度组合，则会丢失对目标的跟踪。  
+
+** 四元数
+我们知道复数有1个实部和1个虚部，从几何的角度它可以表达2维平面。有数学家
+为了找到一种复数来表达3维情况，寻找到一种具有1个实部(w)和3个虚部的复数(i,
+j, k)，这就是四元数，其关系如下, 即四元数[w, (x, y, z)]定义了复数
+w+xi+yj+zk, 2维空间的复数很多性质都能应用到四元数上。并且和复数能用来旋转2
+维中的向量类似，四元数也能用来旋转3维中的向量。 
+1. \(i^{2}=j^{2}=k^{2}=-1\);
+2. \(ij=k, ji=-k\);
+3. \(jk=i, kj=-i\);
+4. \(ki=j, ik=-j\); 
+*** 物理意义
+三维空间有一种“轴-角”对\((n, \theta)\)定义了一个角位移，即绕轴n(向量)旋转
+\(\theta\)角，而四元数就能被解释为角位移的轴-角对方式。但是n和\(\theta\)不
+是直接存储在四元数的四个数中。而是间接的。绕n旋转\(\theta\)用四元数表示如下
