--- a/signal.org
+++ b/signal.org
@@ -311,9 +311,6 @@ w_{k} \Rightarrow \frac{\pi}{M}k, (k = 0, 1, ...,M)
   3. 当时间序列波动很大，长期趋势变化幅度较大，呈现明显且迅速的上升或下降趋
      势时，宜选择较大的 值，如可在0.6～0.8间选值，以使预测模型灵敏度高些，能迅速跟上数据的变化；
   4. 当时间序列数据是上升（或下降）的发展趋势类型， 应取较大值，在0.6~1之间。 
-  
-
-
 ** 采样重构
 *** 频率
 - 模拟频率f：每秒经历多少个周期，单位Hz，即1/s；
@@ -326,3 +323,32 @@ w_{k} \Rightarrow \frac{\pi}{M}k, (k = 0, 1, ...,M)
   构，否则就会在x(n)中产生混叠。对该有限带宽模拟信号的2F_{D}就称为奈奎斯特
   频率。
 *** 重构
+当我们以合适的采样频率\(F_{s}\)采样到若干样本点x(n)后，这些样本点x(n)的频域
+实际上是其模拟信号x(t)的频谱的重复，所以要从x(n)恢复x(t)只需要经过一个低通
+滤波器就能完整的恢复x(t)，理论上可以使用sinc(t)函数, 然而实际使用中不方便.
+\begin{equation}
+sinc(t) = \frac{sin(\pi{}t)}{\pi{}t}
+\end{equation}
+重构数学描述如下
+\begin{equation}
+x(t) = \sum_{-\infty}^{\infty}x(n)sinc[F_{s}(t-nT_{s})]
+\end{equation}
+- 零阶保持器内插(ZOH)：每个样本值将在整个采样周期中保持，知道收到下一个样本
+  为止，如下, 重构后，还需要再做一个滤波才能有略好的效果。或者可以理解为前
+  后两个采样点之间的数据等于前一个采样点的数据。输出信号是阶梯波，含有高次
+  谐波，相位滞后。
+  $$
+  h(t) = 
+  \begin{cases}
+  1, 0<=t<=T_{s}\\ 0, other
+  \end{cases}
+  $$ 
+- 一阶保持器内插(FOH)：相邻的两个样本之间用直线连接，同样需要一个后段滤波器。
+  或者可以理解为前后两点之间线性插值。
+  $$
+  h(t) = 
+  \begin{cases}
+  1+\frac{t}{T}, 0 <t<T_{s}\\ 1-\frac{t}{T}, T_{s}<=t<=2T_{s}\\0, other
+  \end{cases}
+  $$
+- 三次样条内插：
