下划线重定义

--- a/os.org
+++ b/os.org
@@ -1190,31 +1190,31 @@ mBluetoothAdapter.closeProfileProxy(mBluetoothHeadset);
 状态。其使用方法都有固定的模式。
 *** 传感器类型
 传感器类型定义在Sensor.java类中。
-1. 加速度传感器：Sensor.TYPE_ACCELEROMETER;
-2. 磁传感器：Sensor.TYPE_MAGNETIC_FIELD;
-3. 方向传感器：Sensor.TYPE_ORIENTATION;
-4. 陀螺仪传感器：Sensor.TYPE_GYROSCOPE;
-5. 感光传感器：Sensor.TYPE_LIGHT;
-6. 压力传感器：Sensor.TYPE_PRESSURE；
-7. 温度传感器：Sensor.TYPE_TEMPERATURE；
-8. 接近传感器：Sensor.TYPE_PROXIMITY；
-9. 重力传感器：Sensor.TYPE_GRAVITY；
-10. 线性加速度传感器：Sensor.TYPE_LINEAR_ACCELERATION；
-11. 旋转传感器：Sensor.TYPE_ROTATION_VECTOR；
-12. 相对湿度传感器：Sensor.TYPE_RELATIVE_HUMIDITY；
-13. 环境温度传感器：Sensor.TYPE_AMBIENT_TEMPERATURE；
-14. 磁场标定传感器：Sensor.TYPE_MAGNETIC_FIELD_UNCALIBRATED；
-15. 游戏旋转矢量传感器：Sensor.TYPE_GAME_ROTATION_VECTOR；
-16. 陀螺仪标定传感器：Sensor.TYPE_GYROSCOPE_UNCALIBRATED；
-17. Sensor.TYPE_SIGNIFICANT_MOTION
-18. Sensor.TYPE_STEP_DETECTOR
-19. Sensor.TYPE_STEP_COUNTER
-20. Sensor.TYPE_GEOMAGNETIC_ROTATION_VECTOR
-21. Sensor.TYPE_HEART_RATE_MONITOR
-22. Sensor.TYPE_WAKE_UP_TILT_DETECTOR
-23. Sensor.TYPE_WAKE_GESTURE
-24. Sensor.TYPE_GLANCE_GESTURE
-25. Sensor.TYPE_PICK_UP_GESTURE
+1. 加速度传感器：Sensor.TYPE\_ACCELEROMETER;
+2. 磁传感器：Sensor.TYPE\_MAGNETIC_FIELD;
+3. 方向传感器：Sensor.TYPE\_ORIENTATION;
+4. 陀螺仪传感器：Sensor.TYPE\_GYROSCOPE;
+5. 感光传感器：Sensor.TYPE\_LIGHT;
+6. 压力传感器：Sensor.TYPE\_PRESSURE；
+7. 温度传感器：Sensor.TYPE\_TEMPERATURE；
+8. 接近传感器：Sensor.TYPE\_PROXIMITY；
+9. 重力传感器：Sensor.TYPE\_GRAVITY；
+10. 线性加速度传感器：Sensor.TYPE\_LINEAR_ACCELERATION；
+11. 旋转传感器：Sensor.TYPE\_ROTATION_VECTOR；
+12. 相对湿度传感器：Sensor.TYPE\_RELATIVE_HUMIDITY；
+13. 环境温度传感器：Sensor.TYPE\_AMBIENT_TEMPERATURE；
+14. 磁场标定传感器：Sensor.TYPE\_MAGNETIC_FIELD_UNCALIBRATED；
+15. 游戏旋转矢量传感器：Sensor.TYPE\_GAME_ROTATION_VECTOR；
+16. 陀螺仪标定传感器：Sensor.TYPE\_GYROSCOPE_UNCALIBRATED；
+17. Sensor.TYPE\_SIGNIFICANT_MOTION
+18. Sensor.TYPE\_STEP_DETECTOR
+19. Sensor.TYPE\_STEP_COUNTER
+20. Sensor.TYPE\_GEOMAGNETIC_ROTATION_VECTOR
+21. Sensor.TYPE\_HEART_RATE_MONITOR
+22. Sensor.TYPE\_WAKE_UP_TILT_DETECTOR
+23. Sensor.TYPE\_WAKE_GESTURE
+24. Sensor.TYPE\_GLANCE_GESTURE
+25. Sensor.TYPE\_PICK_UP_GESTURE
 *** 使用方法
 1. 向系统申请传感器服务：
    #+begin_src java
