加入3大传感器

--- a/math.org
+++ b/math.org
@@ -660,12 +660,14 @@ $$ P(d1|h+) * P(d2|h+) * P(d3|h+) * ..$$ 这个就是所谓的条件独立假设
 - 方位和角位移：方位是通过相对已知方位的旋转来描述，旋转的量称为角位移。方
   位和角位移的区别像点和向量的区别。用矩阵和四元数表示角位移，用欧拉角表示
   方位。
+** 方向余弦
+方向余弦指一个3x3的方向余弦矩阵，其中每个元素必须在[-1, 1]的范围内。
 ** 欧拉角
 欧拉角的基本思想是将角位移分解为绕3个相互垂直轴的3个旋转组成的序列。绕任意3
 个轴和任意顺序都可以，但是一般都是使用笛卡尔坐标系并按一定顺序所组成的旋转
 序列。常用的约定是heading-pitch-bank，这是一个标准方位，所以物体的方位，就
 是在标准方位上，让物体做heading、pitch、bank旋转，最后物体到达我们想要描述
-的方位。 
+的方位，欧拉角以弧度为单位。 
 # <<olj-fs>>
 - heading-pitch-bank：首先让物体坐标系和惯性坐标系重合，一个方位被定义为1个
   heading角，1个pitch角，1个bank角，绕的轴不一定就是x，y，z。 
@@ -692,7 +694,6 @@ $$ P(d1|h+) * P(d2|h+) * P(d3|h+) * ..$$ 这个就是所谓的条件独立假设
   一个和第二个轴的自由度，只有2个自由度也就意味着手机的运动被限制在了二维空
   间，永远无法进入三维空间，立起来。不知道是不是和汽车的万向节一个原理。如
   果我们的雷达扫描也遇到了万向锁角度组合，则会丢失对目标的跟踪。  
-
 ** 四元数
 我们知道复数有1个实部和1个虚部，从几何的角度它可以表达2维平面。有数学家
 为了找到一种复数来表达3维情况，寻找到一种具有1个实部(w)和3个虚部的复数(i,
