--- a/signal.org
+++ b/signal.org
@@ -141,7 +141,7 @@ f(x)=a_{0}+A_{1}sin(w_{1}x+phi_{1})+A_{2}sin(2w_{2}x+phi_{2})+...
 在全区间上积分。
 \begin{equation}
 \label{equ-fun-dot}
-<u, v> := \int_{a}^{b}u(x)\hat{v}(x)dx
+ (u, v) = \int_{a}^{b}u(x)\hat{v}(x)dx
 \end{equation}
 而在周期函数里面区间端点[a, b]就是任何一个长度为\(2\pi\)的区间端点。那么如
 果把u表示成f(x)，v分别取\(1, sin(x), cos(x), sin(2x)...\)等，就可以得到每
@@ -207,7 +207,7 @@ w_{k} \Rightarrow \frac{\pi}{M}k, (k = 0, 1, ...,M)
 以写为式子\ref{equ-xjw2}
 \begin{equation}
 \label{equ-xjw2}
- X(e^{jw_{k}})=\sum_{l=1}^{N}e^{-j(\pi/M)kn_{l}*x(n_{l})}, (k=0, 1, ..., M)
+ X(e^{jw_{k}})=\sum_{l=1}^{N}e^{-j(\pi/M)kn_{l}}*x(n_{l}), (k=0, 1, ..., M)
 \end{equation}
 当\({x(n_{l})}\)和\({X(e^{jw_{k}})}\)分别排成列向量x和X，我们有式子
 \ref{equ-vec}, 其中W是一个(M+1)乘N维矩阵
@@ -226,6 +226,40 @@ w_{k} \Rightarrow \frac{\pi}{M}k, (k = 0, 1, ...,M)
  X^{T} = x^{T}[e^{-j\frac{\pi}{M}n^{T}k}]
 \end{equation}
 ** 滤波器
+数字滤波器与LTI系统是等价的，描述方式可以有4种。
+- 差分方程；
+- 单位冲激响应h(n), 可以分类如下；
+  1. FIR滤波器：有限脉冲响应，也就是h(n)只在一段时间内才有信号，其他都是0。
+  2. IIR滤波器：无限脉冲响应，也就是h(n)在所有时间内都有信号。
+- 传递函数:若用X(z)表示输入x(n)的Z变换，用Y(z)表示输出y(n)的Z变换，则滤波
+   器的传递函数可以写为：
+   $$H(z)=\frac{Y(z)}{X(z)}=\frac{b_{0}+b_{1}z^{-1}+..+b_{N-1}z^{-(N-1)}}{1+a_{1}z^{-1}+..+a_{M-1}z^{-(M-1)}}$$  
+   利用该式可以用零极图和矢量等工具对滤波器进行直观的分析。通常M>=N, 对FIR
+   滤波器来说H(z)的零点个数为滤波器的阶数。对IIR滤波器来说，H(z)的极点个数
+   称为滤波器的阶数。所以FIR滤波器的阶数为N-1，IIR滤波器的阶数为M-1。阶数越
+   高表明滤波器的系数越多，在实现时运算效率也越低。
+- 频率响应：复指数信号是LTI系统的特征信号，也是滤波器的特征信号，当滤波器输
+  入为单频复指数信号时，系统的输出为频率相同的单频正弦信号，只是幅度和相位
+  可能发生改变。频率响应描述的就是不同频率信号通过滤波器后幅度和相位的变化
+  情况。频率响应是H(z)在单位圆上的取值，并且与单位脉冲响应之间是傅里叶变换
+  的关系，用数学公式表示, 并且可以转为幅频响应和相频响应的乘积。可以分为 
+   $$H(e^{jw})=H(z)|_{z=e^{jw}}=\frac{Y(e^{jw})}{X(e^{jw})}$$ 
+  1. 低通滤波器；
+  2. 高通滤波器；
+  3. 带通滤波器；
+  4. 带阻滤波器；
+  5. 全通滤波器：主要用于改善信号的相频响应；
+滤波器的基本构成单元
+1. 加法单元；
+2. 乘法单元；
+3. 延时单元；
+*** 设计思路
+1. 在具体的应用背景中提取出数字滤波器的性能参数；
+2. 选择合适的滤波器类型，主要是确定使用FIR还是IIR；
+3. 采用适当方法如用MATLAB计算出滤波器的系数；
+4. 用一个适当的结构来表示滤波器；
+5. 分析有限字长对滤波器性能的影响；
+6. 用软件或硬件来实现滤波器算法；
 *** FIR滤波
 如果一个LTI系统的单位脉冲响应长度有限，则此系统称为有限长度脉冲响应(FIR)滤
 波器。因此对一个FIR滤波器，在\(n<n_{1}\)和\(n>n_{2}\)时h(n)=0.
@@ -316,7 +350,8 @@ w_{k} \Rightarrow \frac{\pi}{M}k, (k = 0, 1, ...,M)
 - 模拟频率f：每秒经历多少个周期，单位Hz，即1/s；
 - 模拟角频率Ω：每秒经历多少弧度，单位rad/s；
 - 数字频率w：每个采样点间隔之间的弧度，单位rad。
-- 关系：\(Ω = 2\pi{}f\), \(w = ΩT\)
+- 关系：\(Ω = 2\pi{}f\), \(w = ΩT\), 将数字频率和模拟频率联系起来的是采样
+  频率即\(w=2\pi{}f/f_{s}\), 即数字频率可以看做归一化的模拟频率乘以\(2\pi\)
 *** 采样
 - 采样定理：如果采样频率\(F_{s}\)大于有限带宽信号\(x_{a}(t)\)带宽\(F_{D}\)
   的2倍即 $$F_{s}>2F_{D}$$ 则该信号可以由它的采样值\(x(n)=x_{a}(nT_{s})\)重
