决策树算法

--- a/algorithm.org
+++ b/algorithm.org
@@ -473,6 +473,33 @@ g, l = createDataSet()
 print("resualt: %r" %classify0(point0, g, l, 3))
 #+end_src
 
+** 决策树
+*** 信息熵
+信息熵用来衡量信息量的大小
+- 若某个集合中不确定性越大，则信息量越大，熵越大；
+- 若某个集合中不确定性越小，则信息量越小，熵越小；
+定义：一个值域为\({x_{1}...x_{n}}\)的随机变量X的信息熵H定义为：
+$$H(X) = E(I(X))$$ 
+其中，E代表期望函数，I(X)是X的信息量，I(X)本身也是个随机变量，如果p是概率函
+数，则H(X)可以表示为
+$$H(X)=\sum_{i=1}^{n}p(x_{i})I(x_{i})=-\sum_{i=1}^{n}p(x_{i})log_{b}p(x_{i})$$ 
+在这里b是对数所使用的底。
+- 当b=2时熵的单位是bit；
+- 当b=e时熵单位是nat；
+- 当b=10时熵单位是dit。
+*** 算法逻辑
+构建决策树的过程，就是减小信息熵，减小不确定性。从而完整构造决策树模型。所
+以我们需要在每一次选择分支属性时，计算这样分类所带来的信息熵的增益，增益越
+大，不确定性越小，最终也就是我们要选择的分支属性。 
+- 首先, 我们会在未进行任何分类前求取一个信息熵，这个信息熵涉及到只是简单的
+  求取样本标签的分布，然后按照公式求解信息熵。
+- 然后，在选用某一个属性作为分支属性后，我们需要计算每一个子分支中的样本标
+  签的分布，然后计算每个子样本的信息熵，最后加权平均（期望），求得总信息熵。
+- 计算前后两个信息熵的差值，选择最大的增益属性作为分支属性。一直递归下去，
+  对每一个子样本套用上述方法。直到所有的样本都被归类于某个叶节点，即不可再
+  分为止。 
+以上方法是 *ID3* 方法，还有更好的 *C4.5* 方法，C4.5方法选用信息增益比，克服
+了ID3使用信息增益选择属性时偏向取值较多的属性的不足。 
 ** 回归分析
 回归是一种极易理解的模型，就相当于\(y=f(x)\)，表明自变量x与因变量y的关系。最常见问题有如医生治病时的望、闻、问、切，之后
 判定病人是否生病或生了什么病，其中的望闻问切就是获取自变量x，即特征数据，判断是否生病就相当于获取因变量y，即预测分类。 
