--- a/tool.org
+++ b/tool.org
@@ -25,6 +25,7 @@
 - gnuserv安装：将emacs目录拷贝后，在系统环境变量中增加HOME键值等于emacs路径(d:\emacs)，即可；
 - 自动安装插件：M-x package-list-packages获取插件包列表，enter进入选中插件，
   点击install开始安装；
+- 重新加载配置文件(pymacs)：M-x load-library RET pymacs RET
 ** 基本操作
 *** 按键命令
 - 按键自定义方式
