fft的物理意义

--- a/signal.org
+++ b/signal.org
@@ -225,6 +225,47 @@ w_{k} \Rightarrow \frac{\pi}{M}k, (k = 0, 1, ...,M)
 \label{equ-fvec}
  X^{T} = x^{T}[e^{-j\frac{\pi}{M}n^{T}k}]
 \end{equation}
+*** 物理意义
+DFT的快速算法叫FFT，在MATLAB和Python中都有相关库，一个模拟信号，经过ADC采样
+之后，就变成了数字信号。采样定理告诉我们，采样频率要大于信号频率的两倍，采
+样得到的数字信号，就可以做FFT变换了。N个采样点，经过FFT之后，就可以得到N个
+点的FFT结果。为了方便进行FFT运算，通常N取2的整数次方。假设采样频率为Fs，信
+号频率F，采样点数为N。那么FFT之后结果就是一个为N点的复数。每一个点就对应着
+一个频率点。这个点的模值，就是该频率值下的幅度特性。具体跟原始信号的幅度有
+什么关系呢？假设原始信号的峰值为A，那么FFT的结果的每个点（除了第一个点直流分量之外）的模值就是A的N/2倍。而第一个点就是直流分量，它的模值就是直流分量
+的N倍。而每个点的相位呢，就是在该频率下的信号的相位。第一个点表示直流分量
+（即0Hz），而最后一个点N的再下一个点（实际上这个点是不存在的，这里是假设的
+第N+1个点，也可以看做是将第一个点分做两半分，另一半移到最后）则表示采样频率
+Fs，这中间被N-1个点平均分成N等份，每个点的频率依次增加。例如某点n所表示的频
+率为
+$$Fn=(n-1)*Fs/N$$
+由上面的公式可以看出，Fn所能分辨到频率为为Fs/N，如果采样频率Fs为1024Hz，采
+样点数为1024点，则可以分辨到1Hz。1024Hz的采样率采样1024点，刚好是1秒，也就
+是说，采样1秒时间的信号并做FFT，则结果可以分析到1Hz，如果采样2秒时间的信号
+并做FFT，则结果可以分析到0.5Hz。如果要提高频率分辨力，则必须增加采样点数，
+也即采样时间。频率分辨率和采样时间是倒数关系。 \par
+假设FFT之后某点n用复数a+bi表示，那么这个复数的模就是
+$$An=\sqrt{a^{2}+b^{2}}$$ 
+相位就是
+$$Pn=atan2(b,a)$$
+根据以上的结果，就可以计算出n点（n≠1，且n<=N/2）对应的信号的表达式为：
+$$An/(N/2)*cos(2*pi*Fn*t+Pn)$$ 
+即\(2*An/N*cos(2*pi*Fn*t+Pn)\)。对于n=1点的信号，是直流分量，幅度即为A1/N。
+由于FFT的对称性，通常我们只使用前半部的结果，即小于采样频率一半的结果.\par
+总结：假设采样频率为Fs，采样点数为N，做FFT之后，某一点n（n从1开始）表示的频
+率为：Fn=(n-1)*Fs/N；该点的模值除以N/2就是对应该频率下的信号的幅度（对于直
+流信号是除以N）；该点的相位即是对应该频率下的信号的相位。相位的计算可用函数
+atan2(b,a)计算。atan2(b,a)是求坐标为(a,b)点的角度值，范围从-pi到pi。要精确
+到xHz，则需要采样长度为1/x秒的信号，并做FFT。要提高频率分辨率，就需要增加采
+样点数，这在一些实际的应用中是不现实的，需要在较短的时间内完成分析。解决这
+个问题的方法有频率细分法，比较简单的方法是采样比较短时间的信号，然后在后面
+补充一定数量的0，使其长度达到需要的点数，再做FFT，这在一定程度上能够提高频
+率分辨力。 
+*** python
+- np.fft.fft(samplings):对samplings点做FFT变换；
+- np.fft.rfft(samplings):上面的是左右两边对称的，这个是只有单边的；
+- np.fft.fftfreq(N):表示N点的频率序号，如果再乘以频率分辨率Fs/N, 就可以得到
+  N点的频率值；
 ** 滤波器
 数字滤波器与LTI系统是等价的，描述方式可以有4种。
 - 差分方程；
