数域的几种定义

--- a/math.org
+++ b/math.org
@@ -5,6 +5,7 @@
 
 * 代数
 ** 概念
+*** 数域
 - 自然数：natural number，{0，1，2，3...}等全体非负整数组成的数的集合称为自然数；
 - 正整数：positive integer，{1，2，3...}等向前扩充的数称为正整数；
 - 负整数：{1，2，3...}等向后扩充的数称为妇整数；
@@ -48,7 +49,18 @@
                             |
                             +--other(tensor,group,loop,field)
   #+end_src
+*** 其他
+- 自然底数：e表示自然底数，近似等于2.71828；
+- 指数：是有理数乘方的一种运算形式，它表示的是几个相同因数相乘的关系，2的3
+  次方=2×2×2=8。2的3次方这里2是底数；3是指数；8是结果；
+- 指数函数：形如\(y=a^{x}\)的函数叫做指数函数, 常以e作为底； 
+- 对数：如果a的x次方等于N（a>0，且a不等于1），那么数x叫做以a为底N的对数
+  （logarithm），记作\(x=log_{a}N\)。其中，a叫做对数的底数，N叫做真数。 常
+  用以10为底和以e为底的对数；
+- 对数函数：函数\(y=log_{a}x\)叫做对数函数, a常常等于e； 
 ** 复数
+实数代表一维数轴上的所有点，复数代表二维几何平面上的所有点。复数集和复平面
+内所有点一一对应，也和复平面内的向量一一对应\par
 复数的本质就是旋转，4*i*i = -4, 就是4在数轴上旋转180度，那么4*i就是旋转90度。
 在二维XY平面上，X轴就是实数轴，Y轴就是虚数轴。也就是使用复数i参与运算，就意
 味着旋转。使用如下python代码就可以画出此3d图形。从图中可以看出虚轴和实轴随
@@ -75,6 +87,9 @@ ax.set_ylabel('y')
 ax.set_zlabel('t')
 pl.show()
 #+end_src
+- 模：复数z=a+bi的模表示为\(|z| = \sqrt{a^{2}+b^{2}}\), \(|z|=1\)表示单位圆，
+  \(|z|<1\)表示单位圆内部的复数点；
+- 共轭复数：实部a相等，虚部互为相反数的两个复数共轭，几何上两者关于实轴对称；
 ** 多项式
 *** 概念
 - 最大公因式：设f(x), g(x)是P[x]中两个多项式。P[x]中多项式d(x)称为f(x), g(x)的一个最大公因式，如果它满足
