频域和时域相对应

--- a/signal.org
+++ b/signal.org
@@ -29,8 +29,11 @@ $$x[n]=A*sin(2*pi{}*100*n/fs)=A*sin(0.4*pi{}*n)$$
 - 数字频率w：每个采样点间隔之间的弧度，单位rad，范围应该是\([0,2\pi]\),也是
   在一圈以内，否则违反了奈奎斯特频率定理，w就没有意义了。
 - 采样频率fs：每秒采样点数，单位Hz
-- 关系：\(\Omega = 2\pi{}f\), \(w = \OmegaT\), 将数字频率和模拟频率联系起来的是采样
+- 关系：\(\Omega = 2\pi{}f\), \(w = \Omega{}T\), 将数字频率和模拟频率联系起来的是采样
   频率即\(w=2\pi{}f/fs\), 即数字频率可以看做归一化的模拟频率乘以\(2\pi\)
+** 其他
+- 特征函数：一个信号函数，若系统对该信号的输出响应仅是一个常数(可以是复数)乘以
+  输入信号，则称该信号为系统的特征函数；
 * 线性时不变系统
 线性时不变系统简称LTI系统，可以用它对单位脉冲序列的响应(h(n))来表示。
 - 离散信号可以由单位冲击响应信号来表示。式子如\ref{equ-sigma}, 其中x[k]可以
@@ -227,9 +230,14 @@ $$x(t)=\frac{1}{2\pi}\int_{-\infty}^{\infty}X(j\Omega)e^{j\Omega{}t}d\Omega$$
 \end{equation}
 算子F[.]把一个离散信号x(n)变换成一个实变量w的复值连续函数\(X(e^{jw})\), w被
 称为数字频率，它用 _弧度_ 来度量。
-基本上离散和周期是相互关联的。
+基本上离散和周期是相互关联的，一个周期信号的傅里叶级数表示中，当周期增加时，
+基波频率就减小，成谐波关系的各分量在频率上越靠近，当周期变成无穷大时，这些
+频率分量就变成了一个连续域。频域和时域，在数学上都是一样的，只是一个是频率
+一个是时间。
 - 时域离散，频域就会有周期性；
 - 频域离散，时域就会有周期性；
+- 频域和时域相对应，复指数信号\(e^{jwt}\)和冲击信号\(\delta\)相对应，即如果
+  复指数信号是时域的信号，频率是w，则频域就是在频率轴上w处的一个冲击；
 *** DTFT算法过程
 如果x(n)是有限长的，则x(n)肯定是绝对可加的，即x(n)肯定有DTFT，则可以用
 MATLAB或python来对任意频率w处的\(X(e^{jw})\)进行数值计算。如果我们是在
