--- a/math.org
+++ b/math.org
@@ -15,7 +15,11 @@
 - 无理数：irrational number，不能表示成2个整数之比的数，比如\(\sqrt{2}\)和圆周率；
 - 实数：real number，有理数和无理数合到一起称为实数；
 - 虚数：imaginary number，符号用i表示，i = \(\sqrt{-1}\)；
-- 复数：complex number，由实数和虚数构造出的数叫复数；
+- 复数：complex number，由实数和虚数构造出的数叫复数, 复数的表示方式有；
+  1. 点表示：由复平面上的点一一对应复数；
+  2. 向量表示：和点表示类似, 同时也就有了幅度r和辐角\(\theta\)的说法；
+  3. 三角表示法：\(z=r(cos(\theta)+i\sin(\theta))\)
+  4. 指数表示法：由欧拉公式得\(z=re^{i\theta}\)
 - 向量：vector； 
 - 矩阵：matrix；
 - 张量：tensor；
@@ -90,6 +94,12 @@ pl.show()
 - 模：复数z=a+bi的模表示为\(|z| = \sqrt{a^{2}+b^{2}}\), \(|z|=1\)表示单位圆，
   \(|z|<1\)表示单位圆内部的复数点；
 - 共轭复数：实部a相等，虚部互为相反数的两个复数共轭，几何上两者关于实轴对称；
+- 复数乘法：复数乘积的模等于他们的模相乘，辐角等于他们的辐角相加；
+- 复数除法：复数除法的模等于它们的模的商，辐角等于被除数和除数的辐角之差；
+*** 复变函数
+设G是一个复数z=x+iy的非空集合，存在法则f使得将z变换到另一个复数域w=u+iv, 记
+做w=f(z)；\par
+复变函数展示的就是空间的映射，可以一对一也可以一对多。
 ** 多项式
 *** 概念
 - 最大公因式：设f(x), g(x)是P[x]中两个多项式。P[x]中多项式d(x)称为f(x), g(x)的一个最大公因式，如果它满足
