--- a/signal.org
+++ b/signal.org
@@ -31,9 +31,32 @@ $$x[n]=A*sin(2*pi{}*100*n/fs)=A*sin(0.4*pi{}*n)$$
 - 采样频率fs：每秒采样点数，单位Hz
 - 关系：\(\Omega = 2\pi{}f\), \(w = \Omega{}T\), 将数字频率和模拟频率联系起来的是采样
   频率即\(w=2\pi{}f/fs\), 即数字频率可以看做归一化的模拟频率乘以\(2\pi\)
+** 正交
+*** 正交函数
+在区间[t1, t2]上定义的非零实函数f1(t)与f2(2), 若满足条件
+$$\int_{t1}^{t2}f1(t)f2(t)dt=0$$ 
+则函数f1(t)和f2(t)为区间[t1, t2]上的正交；
+若f1(t)和f2(t)是复变函数，则f1(t)和f2(t)在区间[t1, t2]正交的条件是(其中T表
+示共轭)
+$$\int_{t1}^{t2}f1(t)f2^{T}(t)dt=\int_{t1}^{t2}f1^{T}(t)f2(t)dt=0$$ 
+正交一般是向量上的概念，也可以扩展到函数，说函数u和函数v正交；对于向量正交
+由如下性质。
+- 向量 u=(a, b) 和 v=(c, d) 的内积 u·v 可以用 ac+bd 来计算；
+- 如果内积 u·v =0，意味着 u 和 v 两个向量正交（垂直），例如 (0,1) 和 (1,0)
+  就是正交的；
+- 两个向量如果正交，那么说明其中的任意一个向量都完全没有另外一个向量的分量；
+那么把“内积”的概念推广，对于实变函数f(x)和g(x)，假如可以有这样的两个向量
+对应于函数f(x)的\(u=(f(0),f(1),f(2),f(3),f(4),f(5),...,f(N))\), 对应于函数
+g(x)的\(v=(g(0),g(1),g(2),g(3),g(4),g(5),...,g(N))\) , 现在让这两个N+1维向
+量内积一下，可得：\(u·v=f(0)g(0)+f(1)g(1)+f(2)g(2)+...+f(N)g(N)=0\), 这样来
+看，函数f和g在区间[L,R]上正交。也就是说函数的正交需要表面在一定的区间上正交，
+这个正交也就代表了向量的维度。
 ** 其他
 - 特征函数：一个信号函数，若系统对该信号的输出响应仅是一个常数(可以是复数)乘以
   输入信号，则称该信号为系统的特征函数；
+- 复指数信号：\(e^{jwt}\)在\([0, 2\pi]\)上构成完备正交集，见数学中对复数的
+  定义，wt表示辐角，\([0, 2\pi]\)也就表示复数的所有辐角；
+- 冲击函数：复指数信号在实轴上的积分是冲击函数\(\delta\); 
 * 线性时不变系统
 线性时不变系统简称LTI系统，可以用它对单位脉冲序列的响应(h(n))来表示。
 - 离散信号可以由单位冲击响应信号来表示。式子如\ref{equ-sigma}, 其中x[k]可以
